# uwu_colors

./: Cargo.toml  flake.nix  readme.md
.github/workflows/: nix.yml
src/: cli.rs  colors.rs  lib.rs  main.rs
src/colors/: named_colors.rs
