[package]
name = "uwu_colors"
version = "0.3.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
argh = "0.1.13"
dashmap = "6.1.0"
fancy-regex = "0.14.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-lsp = "0.20.0"
